# contra-filter

./: LICENSE  README.md  contra-filter.cabal  package.yaml  stack.yaml
src/Data/: ContraFilter.hs  Filter.hs
